# OpenRelay-Server

./: Cargo.toml  DEVLOG.md  NGINX.md  README.md  RESPONSES.md
src/: main.rs  relay.rs  types.rs
