[package]
name = "openrelay-server"
version = "1.0.0-rc.1"
edition = "2024"
authors = ["Awe03"]
description = "A zero-knowledge relay server for OpenRelay"

[dependencies]
base64 = "0.22.1"
tokio = { version = "1.44.2", features = ["full"] }
futures-util = "0.3.31"
warp = "0.3.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio-stream = "0.1.17"
chrono = "0.4.40"
thiserror = "2.0.12"
rand = "0.9.1"
clap = { version = "4.5.37", features = ["derive"] }
dashmap = "6.1.0"